
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {scalar_t__ custom; char* shaderText; char* shader; } ;
typedef TYPE_1__ shaderInfo_t ;
typedef int FILE ;


 int SYS_VRB ;
 int SYS_WRN ;
 int Sys_FPrintf (int ,char*,...) ;
 int Sys_Printf (char*,int) ;
 int fclose (int *) ;
 int fflush (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*,char*,...) ;
 char* mapName ;
 char* mapShaderFile ;
 int numShaderInfo ;
 scalar_t__ qfalse ;
 TYPE_1__* shaderInfo ;

void WriteMapShaderFile( void ){
 FILE *file;
 shaderInfo_t *si;
 int i, num;



 if ( mapShaderFile[ 0 ] == '\0' ) {
  return;
 }


 for ( i = 0, num = 0; i < numShaderInfo; i++ )
 {
  if ( shaderInfo[ i ].custom ) {
   break;
  }
 }
 if ( i == numShaderInfo ) {
  return;
 }


 Sys_FPrintf( SYS_VRB, "--- WriteMapShaderFile ---\n" );
 Sys_FPrintf( SYS_VRB, "Writing %s", mapShaderFile );


 file = fopen( mapShaderFile, "w" );
 if ( file == ((void*)0) ) {
  Sys_FPrintf( SYS_WRN, "WARNING: Unable to open map shader file %s for writing\n", mapShaderFile );
  return;
 }


 fprintf( file,
    "// Custom shader file for %s.bsp\n"
    "// Generated by Q3Map2 (ydnar)\n"
    "// Do not edit! This file is overwritten on recompiles.\n\n",
    mapName );


 for ( i = 0, num = 0; i < numShaderInfo; i++ )
 {

  si = &shaderInfo[ i ];
  if ( si->custom == qfalse || si->shaderText == ((void*)0) || si->shaderText[ 0 ] == '\0' ) {
   continue;
  }
  num++;


  fprintf( file, "%s%s\n", si->shader, si->shaderText );


  Sys_FPrintf( SYS_VRB, "." );
 }


 fflush( file );
 fclose( file );

 Sys_FPrintf( SYS_VRB, "\n" );


 Sys_Printf( "%9d custom shaders emitted\n", num );
}
